[gd_scene load_steps=7 format=3 uid="uid://dc57ae6imn6y1"]

[ext_resource type="Script" uid="uid://cfcn1l0ttn5jk" path="res://scripts/main.gd" id="1_0kxa1"]
[ext_resource type="PackedScene" uid="uid://0a8ongl2tut" path="res://escenas/JuegoRonda.tscn" id="2_jumxm"]
[ext_resource type="Script" uid="uid://75pm7obmcax7" path="res://scripts/camera_3d.gd" id="3_jumxm"]

[sub_resource type="PlaneMesh" id="PlaneMesh_eqdig"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d7u15"]
albedo_color = Color(0.331862, 0.192624, 0.0642527, 1)

[sub_resource type="Curve3D" id="Curve3D_d7u15"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 6.02423, 5, 0.0159273, 6, -0.5, 0.6, -6, 0.5, -0.6, 0, 5, 6, 0, 0, 0, 0, 0, 0, -6, 5, 0, -6, -1, 0.6, 6, 1, -0.6, 0, 5, -6),
"tilts": PackedFloat32Array(-0.00280136, 0, 0, 0)
}
point_count = 4

[node name="Main" type="Node3D"]
script = ExtResource("1_0kxa1")

[node name="JuegoRonda" parent="." instance=ExtResource("2_jumxm")]
transform = Transform3D(0.1, 0, 0, 0, 0.0707107, 0.0707107, 0, -0.0707107, 0.0707107, 3.52485, 21.3823, 4.49087)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
mesh = SubResource("PlaneMesh_eqdig")
surface_material_override/0 = SubResource("StandardMaterial3D_d7u15")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 3.52485, 21.3823, 4.49087)
light_energy = 2.178
shadow_enabled = true

[node name="CaminoCamara" type="Path3D" parent="."]
curve = SubResource("Curve3D_d7u15")

[node name="CamaraPivot" type="PathFollow3D" parent="CaminoCamara"]
transform = Transform3D(0.999994, 0, 0, 0, 0.99999, 0, 0, 0, 0.999997, 6.02423, 5, 0.0159273)
rotation_mode = 0

[node name="Camera3D" type="Camera3D" parent="CaminoCamara/CamaraPivot"]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 0, 0, 0)
current = true
script = ExtResource("3_jumxm")
